fix horizontal scroll in homepage due to carousel bullets width

--- a/src/components/Home/HomeSections/HomeSection2/Carrousel/Carrousel.styles.scss
+++ b/src/components/Home/HomeSections/HomeSection2/Carrousel/Carrousel.styles.scss
@@ -61,6 +61,7 @@
 
   .carousel .pagination {
     margin-left: 5%;
+    width: auto;
   }
 }
 
